<resources>
    <string name="app_name">Insagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>

</resources>